# test-qt-cmake

./: CMakeLists.txt  build.sh  main.qml
